Feat: Add Industries circular scroll animation module

--- a/index.html
+++ b/index.html
@@ -183,6 +183,64 @@
             </div>
         </section>
 
+        <!-- INDUSTRIES EXPANDING CIRCLE -->
+        <section class="industries-expand" id="industries">
+            <div class="industries-sticky-wrapper">
+                <!-- Background Circles -->
+                <div class="circle-bg c1"></div>
+                <div class="circle-bg c2"></div>
+                <div class="circle-bg c3"></div>
+
+                <div class="industry-center-text">
+                    <h2>Empowering<br>Every Industry</h2>
+                    <p>From startups to governments, NYRA simplifies influence.</p>
+                </div>
+
+                <!-- Floating Industry Cards -->
+                <div class="industry-orb-container">
+                    <!-- 1. Tech & AI -->
+                    <div class="industry-card" data-angle="0" data-distance="1.2">
+                        <img src="/assets/ind-tech.png" alt="Tech & AI">
+                        <span>Tech & AI Startups</span>
+                    </div>
+                    <!-- 2. Fintech -->
+                    <div class="industry-card" data-angle="45" data-distance="1.5">
+                        <img src="/assets/ind-fintech.png" alt="Fintech & Crypto">
+                        <span>Fintech & Crypto</span>
+                    </div>
+                    <!-- 3. Health -->
+                    <div class="industry-card" data-angle="90" data-distance="1.3">
+                        <img src="/assets/ind-health.png" alt="HealthTech">
+                        <span>HealthTech & Pharma</span>
+                    </div>
+                    <!-- 4. Energy -->
+                    <div class="industry-card" data-angle="135" data-distance="1.6">
+                        <img src="/assets/ind-energy.png" alt="Energy">
+                        <span>Energy</span>
+                    </div>
+                    <!-- 5. ESG -->
+                    <div class="industry-card" data-angle="180" data-distance="1.2">
+                        <img src="/assets/ind-esg.png" alt="ESG">
+                        <span>ESG & Sustainability</span>
+                    </div>
+                    <!-- 6. Supply Chain -->
+                    <div class="industry-card" data-angle="225" data-distance="1.5">
+                        <img src="/assets/ind-supply.png" alt="Supply Chain">
+                        <span>Production & Supply Chain</span>
+                    </div>
+                    <!-- 7. Gov -->
+                    <div class="industry-card" data-angle="270" data-distance="1.3">
+                        <img src="/assets/ind-gov.png" alt="Government">
+                        <span>Gov & Regulatory</span>
+                    </div>
+                    <!-- 8. NGO -->
+                    <div class="industry-card" data-angle="315" data-distance="1.6">
+                        <img src="/assets/ind-ngo.png" alt="NGO">
+                        <span>NGOs</span>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
         <!-- POSITIONING & USE CASES -->
