--- a/index.html
+++ b/index.html
@@ -395,25 +395,56 @@
         </section>
     </main>
 
-    <footer>
-        <div class="container footer-content">
-            <div class="footer-left">
-                <div class="logo" style="margin-bottom: 20px;">
-                    <span class="logo-text">NYRA</span>
-                    <span class="logo-tagline">Influencer Intelligence</span>
+    <!-- FOOTER -->
+    <footer class="footer-modern">
+        <div class="container">
+            <div class="footer-top">
+                <div class="footer-brand">
+                    <div class="logo">
+                        <span class="logo-text">NYRA</span>
+                        <span class="logo-tagline">Influencer Intelligence</span>
+                    </div>
+                    <p class="brand-desc">The authority mapping engine for the B2B era. Predict impact, not just views.
+                    </p>
+                    <div class="social-links">
+                        <a href="#" class="social-icon">Li</a>
+                        <a href="#" class="social-icon">X</a>
+                        <a href="#" class="social-icon">In</a>
+                    </div>
                 </div>
-                <p>© 2025 NYRA</p>
+
+                <div class="footer-nav">
+                    <div class="nav-col">
+                        <h4>Product</h4>
+                        <a href="#solutions">Features</a>
+                        <a href="#industries">Industries</a>
+                        <a href="#">Authority Graph</a>
+                        <a href="#">API Access</a>
+                    </div>
+                    <div class="nav-col">
+                        <h4>Company</h4>
+                        <a href="#">About Us</a>
+                        <a href="#">Careers</a>
+                        <a href="#">Blog</a>
+                        <a href="mailto:hello@nyra.ai">Contact</a>
+                    </div>
+                </div>
+
+                <div class="footer-newsletter">
+                    <h4>Stay Ahead</h4>
+                    <p>Join our newsletter for the latest B2B influence insights.</p>
+                    <form class="newsletter-form" onsubmit="event.preventDefault();">
+                        <input type="email" placeholder="Enter your email">
+                        <button type="submit" class="btn-icon">&rarr;</button>
+                    </form>
+                </div>
             </div>
-            <div class="footer-links">
-                <a href="#">About</a>
-                <a href="#">Privacy</a>
-                <a href="#">Terms</a>
-                <a href="#">Product Roadmap</a>
-            </div>
-            <div class="footer-right">
-                <p>Contact: <a href="mailto:info@usenyra.com">info@usenyra.com</a></p>
-                <div class="social-links">
-                    <a href="https://linkedin.com/company/usenyra" target="_blank">LinkedIn</a>
+
+            <div class="footer-bottom">
+                <p>&copy; 2026 NYRA Intelligence. All rights reserved.</p>
+                <div class="legal-links">
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">Terms of Service</a>
                 </div>
             </div>
         </div>
