Fix: Resolve CSS class conflict causing background faces

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                                 <!-- Dynamic Cards Injected via JS or Default Static -->
                                 <div class="dash-card">
                                     <div class="card-head">
-                                        <div class="avatar-circle c1"></div>
+                                        <div class="avatar-circle avatar-c1"></div>
                                         <div class="card-meta">
                                             <div class="name">Dr. Elena Rostova</div>
                                             <div class="handle">@AI_Ethics_Lab</div>
@@ -346,7 +346,7 @@
 
                                 <div class="dash-card">
                                     <div class="card-head">
-                                        <div class="avatar-circle c2"></div>
+                                        <div class="avatar-circle avatar-c2"></div>
                                         <div class="card-meta">
                                             <div class="name">Marcus Chen</div>
                                             <div class="handle">@TechVantage</div>
