Refactor: Redesign FAQ section to be centered and standard aligned

--- a/index.html
+++ b/index.html
@@ -404,9 +404,9 @@
         <section class="faq" id="faq">
             <div class="container faq-layout">
                 <div class="faq-header">
-                    <h2 class="display-faq">FAQ</h2>
-                    <p class="faq-desc">Our AI-driven automation eliminates busywork, streamlines your operations, and
-                        helps your business grow, without extra effort.</p>
+                    <span class="badge">Support</span>
+                    <h2 class="display-faq">Frequently Asked Questions</h2>
+                    <p class="faq-desc">Everything you need to know about NYRA's intelligence engine.</p>
                 </div>
 
                 <div class="faq-list">
