Layout: Tighten spacing for CTA/Agency sections and add scroll reveal animations

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </section>
 
         <!-- FEATURES (Sticky Layout) -->
-        <section class="features-sticky" id="solutions">
+        <section class="features-sticky reveal-on-scroll" id="solutions">
             <div class="container sticky-layout">
                 <!-- Sticky Left Side -->
                 <div class="sticky-left">
@@ -184,7 +184,7 @@
         </section>
 
         <!-- INDUSTRIES EXPANDING CIRCLE -->
-        <section class="industries-expand" id="industries">
+        <section class="industries-expand reveal-on-scroll" id="industries">
             <div class="industries-sticky-wrapper">
                 <!-- Background Circles -->
                 <div class="circle-bg c1"></div>
@@ -244,7 +244,7 @@
 
 
         <!-- USE CASES CONSOLE -->
-        <section class="use-cases-interactive" id="use-cases">
+        <section class="use-cases-interactive reveal-on-scroll" id="use-cases">
             <div class="container">
                 <div class="section-header text-center">
                     <span class="badge">Applications</span>
@@ -385,7 +385,7 @@
 
 
         <!-- FINAL CTA -->
-        <section class="final-cta" id="signup">
+        <section class="final-cta reveal-on-scroll" id="signup">
             <div class="container glass-gradient">
                 <div class="final-content">
                     <h2>We’re Redefining Influence for the B2B Era</h2>
@@ -401,7 +401,7 @@
 
         <!-- FAQ SECTION -->
         <!-- FAQ SECTION -->
-        <section class="faq" id="faq">
+        <section class="faq reveal-on-scroll" id="faq">
             <div class="container faq-layout">
                 <div class="faq-header">
                     <span class="badge">Support</span>
@@ -462,7 +462,7 @@
         </section>
 
         <!-- AGENCY SECTION -->
-        <section class="agency-section" id="agency">
+        <section class="agency-section reveal-on-scroll" id="agency">
             <div class="container agency-grid">
                 <div class="agency-content">
                     <span class="section-tag">[ AGENCY PARTNERSHIP ]</span>
@@ -498,7 +498,7 @@
     </main>
 
     <!-- FOOTER -->
-    <footer class="footer-modern">
+    <footer class="footer-modern reveal-on-scroll">
         <div class="container">
             <div class="footer-top">
                 <div class="footer-brand">
