--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a href="#solutions">Solutions</a>
                 <a href="#industries">Industries</a>
                 <a href="#pricing">Pricing</a>
-                <a href="https://linkedin.com" target="_blank" class="social-icon">
+                <a href="https://linkedin.com" target="_blank" class="nav-social-icon">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
                         stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                         <path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path>
@@ -509,9 +509,9 @@
                     <p class="brand-desc">The authority mapping engine for the B2B era. Predict impact, not just views.
                     </p>
                     <div class="social-links">
-                        <a href="#" class="social-icon">Li</a>
-                        <a href="#" class="social-icon">X</a>
-                        <a href="#" class="social-icon">In</a>
+                        <a href="#" class="footer-social-btn">Li</a>
+                        <a href="#" class="footer-social-btn">X</a>
+                        <a href="#" class="footer-social-btn">In</a>
                     </div>
                 </div>
 
