--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" type="image/svg+xml" href="/vite.svg">
+    <link rel="preload" as="image" href="/assets/hero-hand-globe.png">
 </head>
 
 <body>
@@ -139,7 +140,7 @@
                         </div>
                         <div class="card-visual">
                             <img src="/assets/feat-authority.png" alt="Authority Graph Visualization"
-                                class="feature-img">
+                                class="feature-img" loading="lazy">
                         </div>
                     </div>
 
@@ -151,7 +152,8 @@
                                 will be on your target personas.</p>
                         </div>
                         <div class="card-visual">
-                            <img src="/assets/feat-impact.png" alt="Network Impact Visualization" class="feature-img">
+                            <img src="/assets/feat-impact.png" alt="Network Impact Visualization" class="feature-img"
+                                loading="lazy">
                         </div>
                     </div>
 
@@ -163,7 +165,8 @@
                                 specific domain and influencer, ensuring you never overpay.</p>
                         </div>
                         <div class="card-visual">
-                            <img src="/assets/feat-pricing.png" alt="Pricing Data Visualization" class="feature-img">
+                            <img src="/assets/feat-pricing.png" alt="Pricing Data Visualization" class="feature-img"
+                                loading="lazy">
                         </div>
                     </div>
 
@@ -175,8 +178,8 @@
                                 to achieve your goals.</p>
                         </div>
                         <div class="card-visual">
-                            <img src="/assets/feat-kpi.png" alt="Optimization Sliders Visualization"
-                                class="feature-img">
+                            <img src="/assets/feat-kpi.png" alt="Optimization Sliders Visualization" class="feature-img"
+                                loading="lazy">
                         </div>
                     </div>
                 </div>
@@ -200,42 +203,42 @@
                 <div class="industry-orb-container">
                     <!-- 1. Tech & AI -->
                     <div class="industry-card" data-angle="0" data-distance="1.2">
-                        <img src="/assets/ind-tech.png" alt="Tech & AI">
+                        <img src="/assets/ind-tech.png" alt="Tech & AI" loading="lazy">
                         <span>Tech & AI Startups</span>
                     </div>
                     <!-- 2. Fintech -->
                     <div class="industry-card" data-angle="45" data-distance="1.5">
-                        <img src="/assets/ind-fintech.png" alt="Fintech & Crypto">
+                        <img src="/assets/ind-fintech.png" alt="Fintech & Crypto" loading="lazy">
                         <span>Fintech & Crypto</span>
                     </div>
                     <!-- 3. Health -->
                     <div class="industry-card" data-angle="90" data-distance="1.3">
-                        <img src="/assets/ind-health.png" alt="HealthTech">
+                        <img src="/assets/ind-health.png" alt="HealthTech" loading="lazy">
                         <span>HealthTech & Pharma</span>
                     </div>
                     <!-- 4. Energy -->
                     <div class="industry-card" data-angle="135" data-distance="1.6">
-                        <img src="/assets/ind-energy.png" alt="Energy">
+                        <img src="/assets/ind-energy.png" alt="Energy" loading="lazy">
                         <span>Energy</span>
                     </div>
                     <!-- 5. ESG -->
                     <div class="industry-card" data-angle="180" data-distance="1.2">
-                        <img src="/assets/ind-esg.png" alt="ESG">
+                        <img src="/assets/ind-esg.png" alt="ESG" loading="lazy">
                         <span>ESG & Sustainability</span>
                     </div>
                     <!-- 6. Supply Chain -->
                     <div class="industry-card" data-angle="225" data-distance="1.5">
-                        <img src="/assets/ind-supply.png" alt="Supply Chain">
+                        <img src="/assets/ind-supply.png" alt="Supply Chain" loading="lazy">
                         <span>Production & Supply Chain</span>
                     </div>
                     <!-- 7. Gov -->
                     <div class="industry-card" data-angle="270" data-distance="1.3">
-                        <img src="/assets/ind-gov.png" alt="Government">
+                        <img src="/assets/ind-gov.png" alt="Government" loading="lazy">
                         <span>Gov & Regulatory</span>
                     </div>
                     <!-- 8. NGO -->
                     <div class="industry-card" data-angle="315" data-distance="1.6">
-                        <img src="/assets/ind-ngo.png" alt="NGO">
+                        <img src="/assets/ind-ngo.png" alt="NGO" loading="lazy">
                         <span>NGOs</span>
                     </div>
                 </div>
