--- a/index.html
+++ b/index.html
@@ -547,6 +547,78 @@
         </div>
     </footer>
 
+    <!-- WAITLIST MODAL -->
+    <div class="modal-overlay" id="waitlist-modal">
+        <div class="modal-container glass">
+            <button class="modal-close" id="close-modal">&times;</button>
+            <div class="modal-header">
+                <h3>Join the Waitlist</h3>
+                <p>Get early access to the Authority Graph™ and start predicting influence.</p>
+            </div>
+            <form class="waitlist-form" id="waitlist-form">
+                <div class="form-row">
+                    <div class="form-group">
+                        <label>First Name</label>
+                        <input type="text" required placeholder="John">
+                    </div>
+                    <div class="form-group">
+                        <label>Last Name</label>
+                        <input type="text" required placeholder="Doe">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label>Work Email</label>
+                    <input type="email" required placeholder="john@company.com">
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group">
+                        <label>Position</label>
+                        <input type="text" placeholder="e.g. Head of Growth">
+                    </div>
+                    <div class="form-group">
+                        <label>Industry</label>
+                        <div class="select-wrapper">
+                            <select>
+                                <option value="" disabled selected>Select Industry</option>
+                                <option value="tech">Tech & AI</option>
+                                <option value="fintech">Fintech</option>
+                                <option value="health">Healthcare</option>
+                                <option value="agency">Marketing Agency</option>
+                                <option value="consumer">Consumer Goods</option>
+                                <option value="other">Other</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label>Country</label>
+                    <div class="select-wrapper">
+                        <select>
+                            <option value="" disabled selected>Select Country</option>
+                            <option value="us">United States</option>
+                            <option value="uk">United Kingdom</option>
+                            <option value="ca">Canada</option>
+                            <option value="de">Germany</option>
+                            <option value="fr">France</option>
+                            <option value="other">Other</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="form-checkbox">
+                    <input type="checkbox" id="consent" required>
+                    <label for="consent">I agree to receive communications from NYRA regarding product updates and early
+                        access opportunities.</label>
+                </div>
+
+                <button type="submit" class="btn btn-primary btn-block">Secure My Spot</button>
+            </form>
+        </div>
+    </div>
+
     <script type="module" src="./main.js"></script>
 </body>
 
