Content: Align Waitlist form industries with landing page sections

--- a/index.html
+++ b/index.html
@@ -572,6 +572,25 @@
                     <input type="email" required placeholder="john@company.com">
                 </div>
 
+                <div class="form-group">
+                    <label>Phone Number</label>
+                    <div class="phone-input-wrapper">
+                        <div class="select-wrapper country-code">
+                            <select>
+                                <option value="+1">+1</option>
+                                <option value="+44">+44</option>
+                                <option value="+49">+49</option>
+                                <option value="+33">+33</option>
+                                <option value="+90">+90</option>
+                                <option value="+91">+91</option>
+                                <option value="+86">+86</option>
+                                <option value="other">Other</option>
+                            </select>
+                        </div>
+                        <input type="tel" placeholder="(555) 000-0000">
+                    </div>
+                </div>
+
                 <div class="form-row">
                     <div class="form-group">
                         <label>Position</label>
@@ -583,10 +602,14 @@
                             <select>
                                 <option value="" disabled selected>Select Industry</option>
                                 <option value="tech">Tech & AI</option>
-                                <option value="fintech">Fintech</option>
-                                <option value="health">Healthcare</option>
+                                <option value="fintech">Fintech & Crypto</option>
+                                <option value="health">HealthTech & Pharma</option>
+                                <option value="energy">Energy & Clean Tech</option>
+                                <option value="esg">ESG & Sustainability</option>
+                                <option value="supply">Supply Chain</option>
+                                <option value="gov">Gov & Regulatory</option>
+                                <option value="ngo">NGOs</option>
                                 <option value="agency">Marketing Agency</option>
-                                <option value="consumer">Consumer Goods</option>
                                 <option value="other">Other</option>
                             </select>
                         </div>
