--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="./style.css">
-    <link rel="icon" type="image/svg+xml" href="/vite.svg">
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="apple-touch-icon" href="/assets/nyra-logo-original.png">
     <link rel="preload" as="image" href="/assets/hero-hand-globe.png">
 </head>
 
