Feat: Add News section to Home and create single Post page template

--- a/index.html
+++ b/index.html
@@ -380,6 +380,52 @@
 
 
 
+        <!-- NEWS & UPDATES -->
+        <section class="news-section reveal-on-scroll" id="news">
+            <div class="container">
+                <div class="section-header text-center">
+                    <span class="badge">Updates</span>
+                    <h2>Latest Intelligence</h2>
+                </div>
+                <div class="news-grid">
+                    <!-- Post 1 -->
+                    <a href="post.html" class="news-card glass">
+                        <div class="news-meta">
+                            <span class="news-date">Oct 12, 2025</span>
+                            <span class="news-tag">Product</span>
+                        </div>
+                        <h3>Introducing the Authority Graph™ 2.0</h3>
+                        <p>A deep dive into our new semantic engine and how it predicts B2B influence with 94% accuracy.
+                        </p>
+                        <span class="read-more">Read Insight &rarr;</span>
+                    </a>
+
+                    <!-- Post 2 -->
+                    <a href="post.html" class="news-card glass">
+                        <div class="news-meta">
+                            <span class="news-date">Sep 28, 2025</span>
+                            <span class="news-tag">Strategy</span>
+                        </div>
+                        <h3>Why "Reach" is the Wrong Metric for B2B</h3>
+                        <p>Stop chasing vanity metrics. Here is why specific authority matters more than broad
+                            visibility.</p>
+                        <span class="read-more">Read Insight &rarr;</span>
+                    </a>
+
+                    <!-- Post 3 -->
+                    <a href="post.html" class="news-card glass">
+                        <div class="news-meta">
+                            <span class="news-date">Sep 15, 2025</span>
+                            <span class="news-tag">Case Study</span>
+                        </div>
+                        <h3>How Acme Corp Scaled via Niche Experts</h3>
+                        <p>See how a Series B startup generated $2M in pipeline using only micro-influencers.</p>
+                        <span class="read-more">Read Insight &rarr;</span>
+                    </a>
+                </div>
+            </div>
+        </section>
+
         <!-- FINAL CTA -->
         <section class="final-cta reveal-on-scroll" id="signup">
             <div class="container glass-gradient">
