--- a/post.html
+++ b/post.html
@@ -203,6 +203,106 @@
                 height: 44px;
             }
         }
+
+        /* Article Footer (Tags & Share) */
+        .article-footer {
+            margin-top: 60px;
+            padding-top: 40px;
+            border-top: 1px solid var(--border-light);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+            gap: 20px;
+        }
+
+        .article-tags {
+            display: flex;
+            gap: 10px;
+        }
+
+        .tag-pill {
+            background: rgba(255, 255, 255, 0.05);
+            color: var(--text-muted);
+            padding: 6px 14px;
+            border-radius: 50px;
+            font-size: 13px;
+            text-decoration: none;
+            transition: all 0.2s;
+            border: 1px solid transparent;
+        }
+
+        .tag-pill:hover {
+            color: #fff;
+            border-color: var(--primary);
+            background: rgba(0, 240, 255, 0.1);
+        }
+
+        .share-buttons {
+            display: flex;
+            gap: 12px;
+            align-items: center;
+        }
+
+        .share-label {
+            font-size: 13px;
+            color: var(--text-muted);
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        .share-btn {
+            width: 36px;
+            height: 36px;
+            border-radius: 50%;
+            background: rgba(255, 255, 255, 0.05);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: #fff;
+            text-decoration: none;
+            transition: all 0.2s;
+            border: 1px solid transparent;
+            font-size: 14px;
+        }
+
+        .share-btn:hover {
+            background: #fff;
+            color: #000;
+        }
+
+        /* Read Next Section */
+        .read-next-section {
+            padding: 80px 0;
+            border-top: 1px solid var(--border-light);
+            background: rgba(0, 0, 0, 0.2);
+        }
+
+        .read-next-header {
+            max-width: 1100px;
+            margin: 0 auto 40px;
+            font-size: 20px;
+            color: #fff;
+        }
+
+        .read-next-grid {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 32px;
+            max-width: 1100px;
+            margin: 0 auto;
+        }
+
+        @media (max-width: 768px) {
+            .read-next-grid {
+                grid-template-columns: 1fr;
+            }
+
+            .article-footer {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+        }
     </style>
 </head>
 
@@ -275,9 +375,56 @@
                         budget from "broad reach" influencers to "high authority" niche experts, they reached fewer
                         people—but closed more deals.</p>
 
+
                     <p>The Authority Graph™ 2.0 is available starting today for all Enterprise customers.</p>
+
+                    <!-- Article Footer -->
+                    <div class="article-footer">
+                        <div class="article-tags">
+                            <a href="#" class="tag-pill">Product</a>
+                            <a href="#" class="tag-pill">Technology</a>
+                            <a href="#" class="tag-pill">Updates</a>
+                        </div>
+                        <div class="share-buttons">
+                            <span class="share-label">Share:</span>
+                            <a href="#" class="share-btn" aria-label="Share on X">X</a>
+                            <a href="#" class="share-btn" aria-label="Share on LinkedIn">in</a>
+                            <a href="#" class="share-btn" aria-label="Copy Link">🔗</a>
+                        </div>
+                    </div>
                 </div>
             </div>
+
+            <!-- Read Next -->
+            <section class="read-next-section">
+                <div class="container">
+                    <h3 class="read-next-header">Read Next</h3>
+                    <div class="read-next-grid">
+                        <!-- Rec 1 -->
+                        <a href="post.html" class="news-card glass">
+                            <div class="news-meta">
+                                <span class="news-date">Sep 28, 2025</span>
+                                <span class="news-tag">Strategy</span>
+                            </div>
+                            <h3>Why "Reach" is the Wrong Metric for B2B</h3>
+                            <p>Stop chasing vanity metrics. Here is why specific authority matters more than broad
+                                visibility.</p>
+                            <span class="read-more">Read Insight &rarr;</span>
+                        </a>
+
+                        <!-- Rec 2 -->
+                        <a href="post.html" class="news-card glass">
+                            <div class="news-meta">
+                                <span class="news-date">Sep 15, 2025</span>
+                                <span class="news-tag">Case Study</span>
+                            </div>
+                            <h3>How Acme Corp Scaled via Niche Experts</h3>
+                            <p>See how a Series B startup generated $2M in pipeline using only micro-influencers.</p>
+                            <span class="read-more">Read Insight &rarr;</span>
+                        </a>
+                    </div>
+                </div>
+            </section>
 
             <!-- CTA -->
             <section class="final-cta" style="border-top: 1px solid var(--border-light);">
