--- a/post.html
+++ b/post.html
@@ -431,7 +431,7 @@
                 <div class="container glass-gradient">
                     <div class="final-content">
                         <h2>Ready to map your market?</h2>
-                        <a href="/" class="btn btn-primary">Get Started</a>
+                        <a href="#signup" class="btn btn-primary">Join Waitlist</a>
                     </div>
                 </div>
             </section>
@@ -507,6 +507,102 @@
             });
         });
     </script>
+    <!-- WAITLIST MODAL -->
+    <div class="modal-overlay" id="waitlist-modal">
+        <div class="modal-container glass">
+            <button class="modal-close" id="close-modal">&times;</button>
+            <div class="modal-header">
+                <h3>Join the Waitlist</h3>
+                <p>Get early access to the Authority Graph™ and start predicting influence.</p>
+            </div>
+            <form class="waitlist-form" id="waitlist-form">
+                <div class="form-row">
+                    <div class="form-group">
+                        <label>First Name</label>
+                        <input type="text" required placeholder="John">
+                    </div>
+                    <div class="form-group">
+                        <label>Last Name</label>
+                        <input type="text" required placeholder="Doe">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label>Work Email</label>
+                    <input type="email" required placeholder="john@company.com">
+                </div>
+
+                <div class="form-group">
+                    <label>Phone Number</label>
+                    <div class="phone-input-wrapper">
+                        <div class="select-wrapper country-code">
+                            <select>
+                                <option value="+1">+1</option>
+                                <option value="+44">+44</option>
+                                <option value="+49">+49</option>
+                                <option value="+33">+33</option>
+                                <option value="+90">+90</option>
+                                <option value="+91">+91</option>
+                                <option value="+86">+86</option>
+                                <option value="other">Other</option>
+                            </select>
+                        </div>
+                        <input type="tel" placeholder="(555) 000-0000">
+                    </div>
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group">
+                        <label>Position</label>
+                        <input type="text" placeholder="e.g. Head of Growth">
+                    </div>
+                    <div class="form-group">
+                        <label>Industry</label>
+                        <div class="select-wrapper">
+                            <select>
+                                <option value="" disabled selected>Select Industry</option>
+                                <option value="tech">Tech & AI</option>
+                                <option value="fintech">Fintech & Crypto</option>
+                                <option value="health">HealthTech & Pharma</option>
+                                <option value="energy">Energy & Clean Tech</option>
+                                <option value="esg">ESG & Sustainability</option>
+                                <option value="supply">Supply Chain</option>
+                                <option value="gov">Gov & Regulatory</option>
+                                <option value="ngo">NGOs</option>
+                                <option value="agency">Marketing Agency</option>
+                                <option value="other">Other</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label>Country</label>
+                    <div class="select-wrapper">
+                        <select>
+                            <option value="" disabled selected>Select Country</option>
+                            <option value="us">United States</option>
+                            <option value="uk">United Kingdom</option>
+                            <option value="ca">Canada</option>
+                            <option value="de">Germany</option>
+                            <option value="fr">France</option>
+                            <option value="other">Other</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="form-checkbox">
+                    <input type="checkbox" id="consent" required>
+                    <label for="consent">I agree to receive communications from NYRA regarding product updates and early
+                        access opportunities.</label>
+                </div>
+
+                <button type="submit" class="btn btn-primary btn-block">Secure My Spot</button>
+            </form>
+        </div>
+    </div>
+
+    <script type="module" src="./main.js"></script>
 </body>
 
 </html>
