--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
         <section class="use-cases-interactive reveal-on-scroll" id="use-cases">
             <div class="container">
                 <div class="section-header text-center">
-                    <span class="badge">Applications</span>
+                    <span class="badge">Use Cases</span>
                     <h2>Built for Result-Driven B2B Teams</h2>
                     <p class="lead">Credibility is the new currency. Here's how to spend it.</p>
                 </div>
