style: Update navbar menu items (added Use Cases, FAQ, Contact; removed Pricing)

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
             <nav class="nav-links">
                 <a href="#solutions">Solutions</a>
                 <a href="#industries">Industries</a>
-                <a href="#pricing">Pricing</a>
+                <a href="#use-cases">Use Cases</a>
+                <a href="#faq">FAQ</a>
+                <a href="mailto:hello@nyra.ai">Contact</a>
             </nav>
             <a href="#signup" class="btn btn-primary btn-nav">Join Waitlist</a>
         </div>
